make code backward compatible